--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form action="">
       <div>
         <label for="input">Input:</label>
-        <textarea name="input" id="input" cols="30" rows="1">Placeholder text</textarea>
+        <textarea name="input" id="input" cols="30" rows="1">   rIKKE </textarea>
       </div>
       <select name="drop" id="drop">
         <option value="a">If input is a first name: Make the first character in a name uppercase, and the rest lowercase</option>
@@ -39,7 +39,7 @@
         <label for="output">Output: </label>
         <textarea name="output" id="output" placeholder="Output goes here" cols="30" rows="1"></textarea>
       </div>
-      <button>generate output</button>
+      <button type="button">generate output</button>
     </form>
   </body>
   <script src="script.js"></script>
