--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form action="">
       <div>
         <label for="input">Input:</label>
-        <textarea name="input" id="input" cols="30" rows="1">   rIKKE Blom Thøgersen</textarea>
+        <textarea name="input" id="input" cols="30" rows="1">Input goes here</textarea>
       </div>
       <select name="drop" id="drop">
         <option value="a">If input is a first name: Make the first character in a name uppercase, and the rest lowercase</option>
